<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/activityLayout">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userInfo"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
        <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/userEmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveData"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
        <EditText android:id="@+id/weightEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"
                  android:hint="@string/weight"/>
        <EditText android:id="@+id/heightEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"
                  android:hint="@string/height"/>
        <Button android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
        <Button android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"/>
    </LinearLayout>
</LinearLayout>
